feature sms gcp connect
added processing sms to credit card module and logic to read sms from a specific phone number and it need to add a patter to check if the message it is right and get value necessaries

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,6 +129,7 @@
     <string name="warning_quote_value">Valor alerta cuota</string>
 
     <string name="taxes_credit_card">Tasas Tarjeta Credito</string>
+    <string name="sms_credit_card">SMS Tarjeta Crédito</string>
     <string name="credit_card">Tarjeta de Credito</string>
     <string name="month">Mes</string>
     <string name="year">Año</string>
