--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -449,4 +449,5 @@
     <string name="message_account_doesnt_create_yet">Para utilizar este modulo es necesario crear una cuenta bancaria de referencia, desea crear una?</string>
     <string name="days_sms_read">Dias de lectura SMS</string>
     <string name="go">Ir</string>
+    <string name="default_web_client_id">332922408573-j1uk3tbu8jp6umcvt9ssdq0l32nlq49o.apps.googleusercontent.com</string>
 </resources>
