feature Fix Issue with 31 days on differ
found isssue when it try to do a differ quotes on credit card it found a quote made on 31 day of a month and when it try to apply it in a copy data with that day in a month that does not have 31 days it threw an issue, and new option to restore when you made a differ quote if work if you dont change the name item because it has a value about info the quote origin

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="settings_app">Configuraciones Aplicación</string>
 
     <string name="not_data">No hay datos que mostrar</string>
+    <string name="ccio_restore">Restaurar</string>
 
     <string name="app_name">Finanzas</string>
     <string name="about_it">Acerca de</string>
@@ -483,4 +484,7 @@
     <string name="default_web_client_id3">332922408573-j1uk3tbu8jp6umcvt9ssdq0l32nlq49o.apps.googleusercontent.com</string>
 
     <string name="toast_save_successful">Se guardo correctamente</string>
+    <string name="ending_recurrent_restore_payment_successfull">Se restauro correctamente</string>
+    <string name="dont_restore_payment_successfull">No se logro restaurar correctamente</string>
+    <string name="do_you_want_to_restore_this_record">¿Desea restaurar este registro al valor original?</string>
 </resources>
