--- a/CreditCardModule/src/main/res/values/strings.xml
+++ b/CreditCardModule/src/main/res/values/strings.xml
@@ -6,10 +6,15 @@
     <string name="credit_value">Valor del Crédito</string>
     <string name="kind_credit_rate">Tipo de Tasa</string>
     <string name="clear">Limpiar</string>
+    <string name="saving">Guardando Simulación</string>
     <string name="values_first_quote">Valores Primera Cuota</string>
     <string name="calculate">Calcular</string>
     <string name="amortization">Ver Amortización</string>
     <string name="save_success">Guardado Simulador Correctamente</string>
     <string name="save_unsuccess">No se logró crear el registro</string>
     <string name="calculation_error">Se presento error en el calculo, revise los valores ingresados</string>
+    <string name="cancel">Cancelar</string>
+    <string name="amortization_value">Valor de Amortizado</string>
+    <string name="interest">Interes</string>
+    <string name="total">Total</string>
 </resources>
