feature credit amortization
* update code to compile
* add services to response right values for credit fix quote
* fix caclulation formular to credit fix quote

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/CreditCardModule/src/main/res/values/strings.xml
+++ b/CreditCardModule/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="amortization_value">Valor de Amortizado</string>
     <string name="interest">Interes</string>
     <string name="total">Total</string>
+    <string name="simulator_quote_variable">Simulador Cuota Variable</string>
+    <string name="amortization_quote_variable">Amortización Cuota Variable</string>
 </resources>
