--- a/credit/src/main/res/values/strings.xml
+++ b/credit/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="period_grace">Periodo de Gracia</string>
     <string name="delete">Eliminar</string>
     <string name="do_you_want_to_delete_this_record">¿Desea eliminar este registro?</string>
-    <string name="navigate_amortization">android-app://co.com.japl.finanzas.module.app/amortization_credit?CREDIT=%s&amp;DATE_BILL=%s&amp;DATE_LAST=%s</string>
+    <string name="navigate_amortization">android-app://co.com.japl.finanzas.module.app/amortization_credit?credit_code=%d&amp;last_date=%s</string>
     <string name="navigate_additional">android-app://co.com.japl.finanzas.module.app/additionals_credit?CREDIT_CODE=%d</string>
     <string name="navigate_add_credit">android-app://co.com.japl.finanzas.module.app/add_credit_fix</string>
     <string name="navigate_detail_credits">android-app://co.com.japl.finanzas.module.app/monthly_credit_list</string>
@@ -45,6 +45,7 @@
     <string name="pending_payment">Pendiente por Pagar</string>
     <string name="interest_value">Valor Intereses</string>
     <string name="capital_value">Valor a Capital</string>
+    <string name="capital_value_short">Capital</string>
     <string name="add_credit">Agregar Credito</string>
     <string name="check_periods">Periodos</string>
     <string name="detail_credits">Detalle</string>
@@ -106,6 +107,11 @@
     <string name="simulator_quote_fix">Simulador Cuota Fija</string>
     <string name="first_capital">Primer Capital</string>
     <string name="first_interest">Primer Interes</string>
+    <string name="extra_value_list">Valor extra</string>
+    <string name="additional_to_pay">Adicional a Pagar</string>
+    <string name="additional_monthly">Adicional Mensual</string>
+    <string name="interest_to_pay_value">Interes a Pagar</string>
+    <string name="interest_value_short">interes</string>
 
     <string-array name="months">
         <item>--- Seleccionar --- </item>
